--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -123,7 +123,14 @@ ul.ul-edu {
   color: #34495E;
 }
 
+/* Cambia texto sección teaching */
+#teaching h3 {
+  color: #566573;
+}
 
-
+/* sección: Home - color del texto */
+#teaching p {
+color: #34495E;
+}
 
 
